@@ -75,6 +75,7 @@
 	* Changed Solr connection detection to be more fault tolerant on missing slashes in the path configuration
 	* Added a multivalue view helper to output values of multivalued Solr document fields
 	* Changed default options for results per page to 10, 25, 50
+	* Added an option for the crop viewhelper to only crop full words, defaults to TRUE
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
